cloudgoat/cloudgoat/scenarios/aws/asg_role_enum/terraform/security_group.tf
resource "aws_security_group" "cg_ssh" {
  name        = "cg-${var.cgid}-ssh"
  description = "Allow SSH from anywhere (for testing)"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  
  }

  egress {
    description = "Allow all outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "cg-${var.cgid}-ssh"
  }
}

resource "aws_security_group" "cg_deny_ssh" {
  name        = "cg-${var.cgid}-no-ssh"
  description = "No SSH"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "cg-${var.cgid}-no-ssh"
  }
}
